Fix z-index of dynamic-txt

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,7 +19,7 @@ video.BgMainVideo {
     align-items: center;
     height: 100vh;
     width: 100%;
-    z-index: 30;
+    z-index: 5;
     background-color: #00000000;
     position: absolute;
     font-size: 200%;
